force-app/main/default/objects/LiveChatTranscript/fields/Is_Coupa_Advantage_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Is_Coupa_Advantage_Supplier__c</fullName>
    <label>Is Coupa Advantage Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>