force-app/main/default/objects/LiveChatTranscript/fields/Visitor_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Visitor_FirstName__c</fullName>
    <label>Visitor First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>