force-app/main/default/objects/LiveChatTranscript/fields/Visitor_Language__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Language__c</fullName>
    <label>Visitor Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>zh_CN</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>