force-app/main/default/objects/LiveChatTranscript/fields/Visitor_LastName__c.field-meta.xml
<CustomField>
    <fullName>Visitor_LastName__c</fullName>
    <label>Visitor Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>